--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -103,6 +103,7 @@
         "libs/frontend/environment/src/index.ts"
       ],
       "@rangeos-nx/frontend/ui/snack": ["libs/frontend/ui/snack/src/index.ts"],
+      "@rangeos-nx/rapid-cmi5": ["libs/rapid-cmi5/src/index.ts"],
       "@rangeos-nx/types/cmi5": ["libs/types/cmi5/src/index.ts"],
       "@rangeos-nx/types/elk": ["libs/types/elk/src/index.ts"],
       "@rangeos-nx/types/internal/common": [
@@ -130,9 +131,7 @@
       "@rangeos-nx/ui/branded": ["libs/ui/components/branded/src/index.ts"],
       "@rangeos-nx/ui/keycloak": ["libs/ui/auth/keycloak/src/index.ts"],
       "@rangeos-nx/ui/redux": ["libs/ui/redux/src/index.ts"],
-      "@rangeos-nx/ui/validation": ["libs/ui/validation/src/index.ts"],
-      "@rangeos-nx/rapid-cmi5": ["libs/rapid-cmi5/src/index.ts"]
-
+      "@rangeos-nx/ui/validation": ["libs/ui/validation/src/index.ts"]
     }
   },
   "exclude": ["**/node_modules", "**/.*/", "tmp"]
