--- a/package.json
+++ b/package.json
@@ -277,6 +277,7 @@
     "@jest-performance-reporter/core": "^2.1.3",
     "@mikro-orm/cli": "^6.4.16",
     "@nx/cypress": "21.6.8",
+    "@nx/devkit": "21.6.8",
     "@nx/esbuild": "21.6.8",
     "@nx/eslint": "21.6.8",
     "@nx/eslint-plugin": "21.6.8",
@@ -284,6 +285,7 @@
     "@nx/jest": "21.6.8",
     "@nx/js": "21.6.8",
     "@nx/node": "21.6.8",
+    "@nx/playwright": "^21.6.8",
     "@nx/react": "21.6.8",
     "@nx/rollup": "21.6.8",
     "@nx/storybook": "21.6.8",
@@ -291,6 +293,7 @@
     "@nx/web": "21.6.8",
     "@nx/webpack": "21.6.8",
     "@nx/workspace": "21.6.8",
+    "@playwright/test": "^1.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@storybook/addon-webpack5-compiler-babel": "3.0.6",
     "@storybook/jest": "^0.2.3",
@@ -371,6 +374,7 @@
     "eslint-plugin-cypress": "2.15.2",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
+    "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "5.0.0",
     "fake-indexeddb": "^6.0.1",
