--- a/libs/ui/components/branded/package.json
+++ b/libs/ui/components/branded/package.json
@@ -1,4 +1,27 @@
 {
   "name": "@rapid-cmi5/ui/branded",
-  "version": "0.0.1"
+  "version": "0.1.0",
+  "description": "A markdown cmi5 editor with built in git version control and made for react.",
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ByLightSDC/rapidcmi5"
+  },
+  "keywords": [
+    "React",
+    "cmi5",
+    "xapi"
+  ],
+  "author": {
+    "name": "Aaron Crawford"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-dom": "*"
+  },
+  "dependencies": {
+    "@rapid-cmi5/cmi5-build/common": "0.1.0"
+  }
 }
