--- a/libs/ui/components/branded/package.json
+++ b/libs/ui/components/branded/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rapid-cmi5/ui/branded",
-  "version": "0.1.0",
+  "name": "@rapid-cmi5/ui",
+  "version": "0.1.1",
   "description": "A markdown cmi5 editor with built in git version control and made for react.",
   "publishConfig": {
     "access": "public"
@@ -22,6 +22,6 @@
     "react-dom": "*"
   },
   "dependencies": {
-    "@rapid-cmi5/cmi5-build/common": "0.1.0"
+    "@rapid-cmi5/cmi5-build-common": "0.1.1"
   }
 }
