Fixed auth for rapid cmi5

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-NX_PUBLIC_KEYCLOAK_URL=https://keycloak.global.cloudcents.bylight.com/auth/
-NX_PUBLIC_KEYCLOAK_REALM=cloudcents
-NX_PUBLIC_KEYCLOAK_CLIENT_ID=rangeos-dashboard
-NX_PUBLIC_KEYCLOAK_SCOPE=profile
-NX_PUBLIC_DEVOPS_API_URL=https://rangeos-api.develop-cp.rangeos.engineering
+#NX_PUBLIC_KEYCLOAK_URL=https://keycloak.global.cloudcents.bylight.com/auth/
+#NX_PUBLIC_KEYCLOAK_REALM=cloudcents
+#NX_PUBLIC_KEYCLOAK_CLIENT_ID=rangeos-dashboard
+#NX_PUBLIC_KEYCLOAK_SCOPE=profile
+#NX_PUBLIC_DEVOPS_API_URL=https://rangeos-api.develop-cp.rangeos.engineering
 
 
 
