--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "graphql-type-json": "^0.3.2",
     "graphql-ws": "^5.11.2",
     "guacamole-common-js": "^1.5.0",
+    "hast-util-to-html": "^9.0.5",
     "history": "^5.3.0",
     "idb-keyval": "^6.2.2",
     "inline-style-parser": "^0.2.4",
