--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ cc-cmi5-player-dist
 build-output/
 .nx
 migration.json/
-
+audit.json
 
 libs/ui/components/branded/src/assets/cmi5-player/background.png
 libs/ui/components/branded/src/assets/cmi5-player/**
