--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@mui/x-charts": "^7.22.3",
     "@mui/x-date-pickers": "7.29.4",
     "@mui/x-tree-view": "^7.22.0",
-    "@openapitools/openapi-generator-cli": "2.16.2",
+    "@openapitools/openapi-generator-cli": "^2.26.0",
     "@react-keycloak/web": "^3.4.0",
     "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/typography": "^0.5.15",
@@ -64,7 +64,7 @@
     "ajv": "^8.17.1",
     "animejs": "^3.2.2",
     "archiver": "^6.0.1",
-    "axios": "1.11.0",
+    "axios": "^1.13.2",
     "cidr-tools": "^11.0.2",
     "commander": "^13.1.0",
     "core-js": "3.36.1",
@@ -120,9 +120,9 @@
     "react-resizable-panels": "^2.1.7",
     "react-responsive-carousel": "^3.2.23",
     "react-rough-notation": "^1.0.5",
-    "react-router": "7.4.0",
+    "react-router": "^7.11.0",
     "react-simple-code-editor": "^0.14.1",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^16.1.0",
     "reactflow": "^11.11.4",
     "redux-mock-store": "^1.5.5",
     "redux-persist": "^6.0.0",
@@ -136,9 +136,9 @@
     "remark-mdx": "^3.1.0",
     "rough-notation": "^0.5.1",
     "slug": "^9.1.0",
-    "socket.io": "4.2.0",
+    "socket.io": "^4.8.3",
     "socket.io-client": "^4.4.1",
-    "socket.io-stream": "^0.9.1",
+    "socket.io-stream": "^0.5.3",
     "style-loader": "^4.0.0",
     "uniqid": "^5.4.0",
     "uuid": "^8.3.2",
@@ -162,7 +162,7 @@
     "@nx/js": "21.6.8",
     "@nx/node": "21.6.8",
     "@nx/playwright": "^21.6.8",
-    "@nx/react": "21.6.8",
+    "@nx/react": "^22.3.3",
     "@nx/rollup": "21.6.8",
     "@nx/storybook": "21.6.8",
     "@nx/vite": "21.6.8",
@@ -230,10 +230,10 @@
     "cypress": "14.5.4",
     "cypress-plugin-api": "^2.10.3",
     "d3-selection": "^3.0.0",
-    "dependency-cruiser": "^10.4.0",
+    "dependency-cruiser": "^17.3.5",
     "dotenv-cli": "^7.0.0",
-    "electron": "^34.5.6",
-    "esbuild": "^0.19.2",
+    "electron": "^39.2.7",
+    "esbuild": "^0.27.2",
     "eslint": "8.57.1",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-cypress": "2.15.2",
@@ -252,9 +252,7 @@
     "json-schema-to-typescript": "^15.0.4",
     "monaco-editor-webpack-plugin": "^7.1.1",
     "msw": "^2.7.3",
-    "nodemon": "^2.0.13",
-    "npm-check": "^5.9.2",
-    "npm-check-updates": "^11.8.5",
+    "npm-check-updates": "^19.2.0",
     "nx": "21.6.8",
     "nx-electron": "^21.0.1",
     "postcss": "8.4.38",
@@ -262,7 +260,7 @@
     "prettier": "3.4.2",
     "react-refresh": "^0.10.0",
     "rollup-plugin-tsconfig-paths": "^1.5.2",
-    "storybook": "9.1.9",
+    "storybook": "^9.1.17",
     "supertest": "^6.3.3",
     "swagger-ui-watcher": "^2.1.12",
     "swc-loader": "0.1.15",
