--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,11 +10,13 @@
       "webRoot": "${workspaceFolder}/apps/rapid-cmi5-electron-frontend",
       "sourceMapPathOverrides": {
         "webpack:///./*": "${webRoot}/*",
-        "webpack://apps/*": "${webRoot}/apps/*",
-        "webpack:///src/*": "${workspaceFolder}/apps/rapid-cmi5-electron-frontend/src/*",
-        "webpack:///libs/*": "${workspaceFolder}/libs/*",
-        "webpack://*/src/*": "${workspaceFolder}/apps/rapid-cmi5-electron-frontend/src/*",
-        "webpack://*/libs/*": "${workspaceFolder}/libs/*"
+        "webpack:///*": "${webRoot}/*",
+        "webpack:///packages/*": "${webRoot}/packages/*",
+        "webpack:///apps/*": "${webRoot}/apps/*",
+        "webpack:///libs/*": "${webRoot}/libs/*",
+        "*/packages/*": "${webRoot}/packages/*",
+        "*/apps/*": "${webRoot}/apps/*",
+        "*/libs/*": "${webRoot}/libs/*"
       }
     },
     {
