--- a/packages/ui/tsconfig.lib.json
+++ b/packages/ui/tsconfig.lib.json
@@ -3,8 +3,19 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "declaration": true,
-    "types": ["node"]
+    "types": [
+      "node",
+      "@nx/react/typings/cssmodule.d.ts",
+      "@nx/react/typings/image.d.ts"
+    ]
   },
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
-  "include": ["**/*.js", "**/*.jsx", "**/*.mdx", "**/*.ts", "**/*.tsx"]
+  "include": [
+    "**/*.js",
+    "**/*.jsx",
+    "**/*.mdx",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.css"
+  ]
 }
