--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-responsive-carousel": "^3.2.23",
     "react-rough-notation": "^1.0.5",
-    "react-router": "^7.11.0",
+    "react-router": "7.4.0",
     "react-simple-code-editor": "^0.14.1",
     "react-syntax-highlighter": "^16.1.0",
     "reactflow": "^11.11.4",
