--- a/packages/rapid-cmi5/package.json
+++ b/packages/rapid-cmi5/package.json
@@ -18,8 +18,11 @@
     "name": "Aaron Crawford"
   },
   "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.0.0",
+    "react-redux": "^8.0.0",
+    "react-router": "^7.4.0"
   },
   "dependencies": {
     "@rapid-cmi5/cmi5-build-common": "0.1.1",
