--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,8 +18,10 @@
     "name": "Aaron Crawford"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-dom": "*"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.0.0",
+    "react-router": "^7.4.0"
   },
   "dependencies": {
     "@rapid-cmi5/cmi5-build-common": "0.1.1"
