--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -120,6 +120,8 @@ jobs:
         run: npm run nxe:make:app
         env:
           APPLE_ARCH: ${{ matrix.arch }}
+          APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
 
       - name: Notarize DMG
         if: ${{ env.APPLE_ID != '' && env.APPLE_CERTIFICATE != '' }}
