--- a/package.json
+++ b/package.json
@@ -248,6 +248,7 @@
     "fast-xml-parser": "^5.2.0",
     "headers-polyfill": "^3.2.5",
     "jest": "30.0.5",
+    "jest-environment-jsdom": "^30.2.0",
     "jest-environment-node": "^29.7.0",
     "jest-util": "30.0.5",
     "jiti": "2.4.2",
