--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,7 +20,8 @@
   "peerDependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-redux": "^8.0.0",
+    "react-redux": "^9.0.0",
+    "@reduxjs/toolkit": "^2.0.0",
     "react-router": "^7.4.0"
   },
   "dependencies": {
