--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,6 +83,40 @@ jobs:
 
             ### Changelog
             <!-- Add changelog here -->
+  build-cc-cmi5-player:
+    name: Build cc-cmi5-player
+    runs-on: ubuntu-latest
+    needs: create-release
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Update package.json version
+        run: |
+          npm version ${{ needs.create-release.outputs.version }} --no-git-tag-version --allow-same-version
+
+      - name: Build cc-cmi5-player
+        run: |
+          npx nx build cc-cmi5-player
+
+      - name: Upload cc-cmi5-player assets
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ needs.create-release.outputs.version }}
+          files: |
+            dist/**/cc-cmi5-player*
+
+          fail_on_unmatched_files: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-electron:
     name: Build Electron (${{ matrix.os }})
