--- a/apps/cc-cmi5-player/project.json
+++ b/apps/cc-cmi5-player/project.json
@@ -7,9 +7,7 @@
   "targets": {
     "build": {
       "executor": "@nx/webpack:webpack",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
         "compiler": "babel",
@@ -30,11 +28,10 @@
             "input": "apps/cc-cmi5-player/src/test/",
             "glob": "**/*",
             "output": "."
-          }
+          },
+          "apps/cc-cmi5-player/src/mockServiceWorker.js"
         ],
-        "styles": [
-          "apps/cc-cmi5-player/src/styles.css"
-        ],
+        "styles": ["apps/cc-cmi5-player/src/styles.css"],
         "scripts": [],
         "isolatedConfig": true,
         "webpackConfig": "apps/cc-cmi5-player/webpack.config.js",
@@ -83,9 +80,7 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": [
-        "{options.outputFile}"
-      ]
+      "outputs": ["{options.outputFile}"]
     },
     "serve-static": {
       "executor": "@nx/web:file-server",
@@ -95,9 +90,7 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/cc-cmi5-player/jest.config.ts"
       }
