--- a/apps/cc-cmi5-player/project.json
+++ b/apps/cc-cmi5-player/project.json
@@ -25,7 +25,7 @@
             "output": "assets/rapid-cmi5"
           },
           {
-            "input": "apps/cc-cmi5-player/src/test/",
+            "input": "cmi5-test-lessons/test-lesson/",
             "glob": "**/*",
             "output": "."
           },
@@ -66,7 +66,8 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "cc-cmi5-player:build",
-        "hmr": true
+        "hmr": true,
+        "port": 4300
       },
       "configurations": {
         "development": {
