CCUI-2634 #comment Accidental Commit

--- a/apps/cc-cmi5-player/project.json
+++ b/apps/cc-cmi5-player/project.json
@@ -66,8 +66,7 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "cc-cmi5-player:build",
-        "hmr": true,
-        "port": 4300
+        "hmr": true
       },
       "configurations": {
         "development": {
