MVP for electron with SSO

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@
 # NX_PUBLIC_KEYCLOAK_SCOPE=profile
 # NX_PUBLIC_DEVOPS_API_URL=https://rangeos-api.develop-cp.rangeos.engineering
 
+NX_PUBLIC_AUTH_URL=https://rangeos.engineering/auth
 
 
 #Local development
