--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "css-loader": "^7.1.2",
     "date-fns": "2.30.0",
     "dotenv": "^10.0.0",
+    "electron-store": "^11.0.2",
     "extract-zip": "^2.0.1",
     "file-saver": "^2.0.5",
     "form-data": "^4.0.0",
